--- a/app/src/main/res/layout/activity_codeforces.xml
+++ b/app/src/main/res/layout/activity_codeforces.xml
@@ -13,6 +13,7 @@
         android:padding="16dp" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:visibility="gone"
